@@ -1,64 +1,51 @@
----
-- name: Nexus Configuration Test Deployment
-  hosts: lxpd208
-  become: no
-  vars:
-    # Path Definitions
-    nexus_base_path: "/opt/nexus"
-    # Target folder for testing
-    nexus_test_dir: "{{ nexus_base_path }}/test"
-    
-    # Internal paths used inside the config files
-    nexus_data_dir: "{{ nexus_base_path }}/sonatype-work/nexus3"
-    nexus_ssl_dir: "{{ nexus_base_path }}/ssl"
-    
-    # Ownership (From your environment)
-    deploy_user: "cmdeploy"
-    deploy_group: "edrstaff"
-    
-    # Performance Parameters
-    nexus_xms: "6G"
-    nexus_xmx: "6G"
-    nexus_max_direct_memory: "15530M"
-    
-    # Certificate and Passwords
-    keystore_filename: "nexus01.jks"
-    # Unified variable name to fix the 'undefined' error
-    keystore_password: "edrcmadm"
-    keystore_password_obf: "OBF:1unr1sov1uvk1u9h1ua11uum1sov1uo7"
+-Djavax.net.ssl.trustStore=/opt/nexus/ssl/nexus01.jks
 
-  tasks:
-    - name: Create the test directory
-      file:
-        path: "{{ nexus_test_dir }}"
-        state: directory
-        owner: "{{ deploy_user }}"
-        group: "{{ deploy_group }}"
-        mode: '0755'
 
-    - name: Generate nexus.vmoptions in test folder
-      template:
-        src: templates/nexus.vmoptions.j2
-        dest: "{{ nexus_test_dir }}/nexus.vmoptions"
-        owner: "{{ deploy_user }}"
-        group: "{{ deploy_group }}"
-        mode: '0644'
-        backup: yes
-      register: vm_test
+-Xms{{ nexus_xms | default('2703m') }}
+-Xmx{{ nexus_xmx | default('2703m') }}
+-XX:MaxDirectMemorySize={{ nexus_max_direct_memory | default('2G') }}
+-XX:+UnlockDiagnosticVMOptions
+-XX:+LogVMOutput
+-XX:LogFile={{ nexus_data_dir }}/log/jvm.log
+-XX:-OmitStackTraceInFastThrow
+-Djava.net.preferIPv4Stack=true
+-Dfile.encoding=UTF-8
 
-    - name: Generate jetty-https.xml in test folder
-      template:
-        src: templates/jetty-https.xml.j2
-        dest: "{{ nexus_test_dir }}/jetty-https.xml"
-        owner: "{{ deploy_user }}"
-        group: "{{ deploy_group }}"
-        mode: '0644'
-        backup: yes
-      register: jetty_test
+-Djavax.net.ssl.trustStore={{ nexus_data_dir }}/ssl/{{ keystore_filename }}
+-Djavax.net.ssl.trustStorePassword={{ keystore_password }}
+-Djavax.net.ssl.keyStore={{ nexus_data_dir }}/ssl/{{ keystore_filename }}
+-Djavax.net.ssl.keyStorePassword={{ keystore_password }}
 
-    - name: Display test deployment results
-      debug:
-        msg: 
-          - "VMOptions Path: {{ nexus_test_dir }}/nexus.vmoptions"
-          - "Jetty XML Path: {{ nexus_test_dir }}/jetty-https.xml"
-          - "Deployment Status: Success"
+-Dkaraf.home=.
+-Dkaraf.base=.
+-Djava.util.logging.config.file=etc/spring/java.util.logging.properties
+-Dkaraf.data={{ nexus_data_dir }}
+-Dkaraf.log={{ nexus_data_dir }}/log
+-Djava.io.tmpdir={{ nexus_data_dir }}/tmp
+-Djdk.tls.ephemeralDHKeySize=2048
+-Dfile.encoding=UTF-8
+#
+# additional vmoptions needed for Java9+
+#
+--add-reads=java.xml=java.logging
+--add-opens
+java.base/java.security=ALL-UNNAMED
+--add-opens
+java.base/java.net=ALL-UNNAMED
+--add-opens
+java.base/java.lang=ALL-UNNAMED
+--add-opens
+java.base/java.util=ALL-UNNAMED
+--add-opens
+java.naming/javax.naming.spi=ALL-UNNAMED
+--add-opens
+java.rmi/sun.rmi.transport.tcp=ALL-UNNAMED
+--add-exports=java.base/sun.net.www.protocol.http=ALL-UNNAMED
+--add-exports=java.base/sun.net.www.protocol.https=ALL-UNNAMED
+--add-exports=java.base/sun.net.www.protocol.jar=ALL-UNNAMED
+--add-exports=jdk.xml.dom/org.w3c.dom.html=ALL-UNNAMED
+--add-exports=jdk.naming.rmi/com.sun.jndi.url.rmi=ALL-UNNAMED
+--add-exports=java.security.sasl/com.sun.security.sasl=ALL-UNNAMED
+--add-exports=java.base/sun.security.x509=ALL-UNNAMED
+--add-exports=java.base/sun.security.rsa=ALL-UNNAMED
+--add-exports=java.base/sun.security.pkcs=ALL-UNNAMED
